alterar a sigla N.O.R para NOR

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           ></script>
         </div>
         <div id="formulario" class="item">
-          <h1>N.O.R</h1>
+          <h1>NOR</h1>
           <h2>Cadastro de Aluno</h2>
           <!-- PARTE DO ID -->
           <label>ID</label>
